--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,8 +1,5 @@
 @charset "UTF-8";
 /******************************************
-*************** VARIABLES *****************
-******************************************/
-/******************************************
 ****** MOBILE VIEW (max-width: 768px) ***** → (Min 280px) XS
 ******************************************/
 /******************************************
@@ -11,7 +8,8 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: azure;
+  background-color: white;
+  min-width: 300px;
 }
 
 body main {
@@ -98,6 +96,10 @@ body main nav .arrow {
   height: 10px;
 }
 
+body main #welcome {
+  display: none;
+}
+
 body main section {
   width: 100%;
   background-color: white;
@@ -179,19 +181,40 @@ body main section article p {
 body main section article .articleDiv {
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 body main section article .articleDiv #wrapperIcons {
-  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+body main section article .articleDiv #wrapperIcons #wrapperIconsRight {
+  display: none;
+}
+
+body main section article .articleDiv #wrapperIcons #wrapperIconsRight div {
+  border: 1px solid black;
+}
+
+body main section article .articleDiv #wrapperIcons #wrapperIconsLeft div {
+  border: 1px solid black;
 }
 
 body main section article .articleDiv #wrapperIcons div {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   border-radius: 3px;
-  border: 1px solid black;
   margin: 2px 10px 2px 2px;
   padding: 3px;
   font-size: 11px;
@@ -215,6 +238,10 @@ body main section article .articleDiv #wrapperIcons div:last-child {
 body main section article .articleDiv #wrapperIcons div #maximizeImg {
   margin-right: 0px;
   margin-top: 1px;
+}
+
+body main section article .articleDiv #wrapperIcons #inTech {
+  display: none;
 }
 
 body main section #showMore {
@@ -257,6 +284,64 @@ body main section #chat img {
 /********************************************************
 * SMALL SCREEN (max-width: 961px) and (min-width: 767px)*   →  (Ipad)
 ********************************************************/
+@media screen and (max-width: 961px) and (min-width: 452px) {
+  body {
+    background-color: red;
+  }
+  /******************************************
+****** MOBILE VIEW (max-width: 768px) ***** → (Min 280px) XS
+******************************************/
+  body main #welcome {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  body main #welcome p span {
+    font-weight: bold;
+  }
+  body main #welcome img {
+    width: 15px;
+    height: 15px;
+    padding-right: 15px;
+  }
+}
+
+@media screen and (max-width: 992px) and (min-width: 601px) {
+  body {
+    background-color: blue;
+  }
+}
+
+/*@media screen and (max-width: 450px){
+    @import "stylesSass/mobileView";
+}*/
+/*
+@media screen and (max-width: 850px) and (min-width: 451px){ //and (min-width: 500px){
+    html{
+        width: 40px;
+        margin: 0px;
+        background-color: red;
+    }
+
+    main{
+        width: 250px;
+
+        section{
+            background-color: red;
+            width: 250px;
+            height: 250px;
+            margin-left: 5%;
+            margin-right: 10%;
+            margin-top: 7.5%;
+        
+            article{
+                width: 450px;
+                background-color: yellow;
+            }
+        }
+    }
+
+}    */
 /***********************************************************
 * Medium Screen (max-width: 1024px) and (min-width: 960px) *
 ************************************************************/
