--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -34,9 +34,9 @@ body main header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 5px;
   background-color: white;
   border-bottom: 0.25px silver solid;
+  width: 100%;
 }
 
 body main header #logoImg {
@@ -65,6 +65,7 @@ body main header a {
   color: darkgray;
   margin-top: 5px;
   font-size: 15px;
+  margin-right: 5px;
 }
 
 body main nav {
@@ -81,8 +82,9 @@ body main nav {
           justify-content: space-between;
   background-color: white;
   font-size: 9px;
-  padding: 15px 2px;
+  padding: 15px 0px;
   border-bottom: 1px solid silver;
+  width: 100%;
 }
 
 body main nav a {
@@ -198,10 +200,6 @@ body main section article .articleDiv #wrapperIcons #wrapperIconsRight {
   display: none;
 }
 
-body main section article .articleDiv #wrapperIcons #wrapperIconsRight div {
-  border: 1px solid black;
-}
-
 body main section article .articleDiv #wrapperIcons #wrapperIconsLeft div {
   border: 1px solid black;
 }
@@ -291,10 +289,33 @@ body main section #chat img {
   /******************************************
 ****** MOBILE VIEW (max-width: 768px) ***** → (Min 280px) XS
 ******************************************/
-  body main #welcome {
+  body {
+    background-color: #F9F9F9;
+  }
+  body main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  body main #welcome {
+    display: -ms-grid;
+    display: grid;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    width: 90%;
+    background-color: white;
+    margin: 15px 0;
+    border: solid 1px #F9F9F9;
   }
   body main #welcome p span {
     font-weight: bold;
@@ -303,6 +324,40 @@ body main section #chat img {
     width: 15px;
     height: 15px;
     padding-right: 15px;
+  }
+  body main section {
+    width: 90%;
+    margin: 15px 0;
+  }
+  body main section article .articleDiv #wrapperIcons {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  body main section article .articleDiv #wrapperIcons #wrapperIconsLeft #inTech {
+    display: inline;
+    border: none;
+  }
+  body main section article .articleDiv #wrapperIcons #wrapperIconsLeft .onlyMobile {
+    display: none;
+  }
+  body main section article .articleDiv #wrapperIcons #wrapperIconsRight {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 20%;
+  }
+  body main section article .articleDiv #wrapperIcons #wrapperIconsRight div {
+    border: 1px solid black;
+    padding: 0 20px;
+    background-color: #EFEFEF;
+    margin-right: 4.5px;
+  }
+  body main section #showMore {
+    padding: 10px 0;
   }
 }
 
