--- a/starter-code/stylesSass/_mobileView.scss
+++ b/starter-code/stylesSass/_mobileView.scss
@@ -20,9 +20,9 @@ body{
             grid-column-end: 2;
             display: flex;
             justify-content: space-between;
-            padding: 5px;
             background-color: white;
             border-bottom: 0.25px silver solid;
+            width: 100%;
 
             #logoImg{
                 width: 25px;
@@ -49,6 +49,7 @@ body{
                 color: darkgray;
                 margin-top: 5px;
                 font-size: 15px;
+                margin-right: 5px;
             }
         }
 
@@ -60,8 +61,9 @@ body{
             justify-content: space-between;
             background-color: white;
             font-size: 9px;
-            padding: 15px 2px;
+            padding: 15px 0px;
             border-bottom: 1px solid silver;
+            width: 100%;
 
             a{
                 margin-left: 5px;
@@ -152,9 +154,6 @@ body{
 
                         #wrapperIconsRight{
                             display: none;
-                            div{
-                                border: 1px solid black;
-                            }
                         }
 
                         #wrapperIconsLeft{
