--- a/starter-code/stylesSass/_smallScreen.scss
+++ b/starter-code/stylesSass/_smallScreen.scss
@@ -2,17 +2,28 @@
 ****** MOBILE VIEW (max-width: 768px) ***** → (Min 280px) XS
 ******************************************/
 body{
+    background-color: #F9F9F9;
    main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
        header{
-
+        //.
        }
 
        nav{
-
+        //.
        }
 
        #welcome{
-        display: flex;
+        display: grid;
+        align-content: center;
+        width: 90%;
+        background-color: white;
+        margin: 15px 0;
+        border: solid 1px #F9F9F9;
 
             p{
                 span{
@@ -28,9 +39,39 @@ body{
        }
 
        section{
+           width: 90%;
+           margin: 15px 0;
            article{
+                .articleDiv{
+                    #wrapperIcons{
+                        justify-content: space-between;
+                        #wrapperIconsLeft{
+                            #inTech{
+                                display: inline;
+                                border: none;
+                            }
 
-           }
-       }
-   }
+                            .onlyMobile{
+                                display: none;
+                            }
+                        }
+                        #wrapperIconsRight{
+                            display: flex;
+                            align-items: center;
+                            width: 20%;
+                            div{
+                                border: 1px solid black;
+                                padding: 0 20px;
+                                background-color: #EFEFEF;
+                                margin-right: 4.5px;
+                            }
+                        }
+                    }
+                }
+            }
+            #showMore{
+                padding: 10px 0;
+            }
+        }
+    }
 }
