--- a/starter-code/stylesSass/_smallScreen.scss
+++ b/starter-code/stylesSass/_smallScreen.scss
@@ -1,5 +1,5 @@
 /******************************************
-****** MOBILE VIEW (max-width: 768px) ***** → (Min 280px) XS
+****** SMALL SCREEN (max-width: 768px) **** → DE 452px A 
 ******************************************/
 body{
     background-color: #F9F9F9;
@@ -8,24 +8,23 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-   
-       header{
-        //.
-       }
-
-       nav{
-        //.
-       }
 
        #welcome{
-        display: grid;
+        display: inline-block;
         align-content: center;
         width: 90%;
         background-color: white;
         margin: 15px 0;
         border: solid 1px #F9F9F9;
 
+
             p{
+                align-items: center;
+                width: 85%;
+                float: left;
+                margin-left: 10px;
+                font-size: 12px;
+                text-align: center;
                 span{
                     font-weight: bold;
                 }
@@ -35,6 +34,31 @@ body{
                 width: 15px;
                 height: 15px;
                 padding-right: 15px;
+                margin-left: 10px;
+                margin-top: 10px;
+                float: right;
+            }
+
+            div{
+                display: flex;
+                clear: both;
+                align-items: center;
+                align-items: inherit;
+                justify-content: center;
+                margin-bottom: 10px;
+
+                button{
+                    background: none;
+                    margin-left: 5px;
+                    font: inherit;
+                    border: none;
+                    cursor: pointer;
+                    outline: inherit;
+                    background-color: #DA552F;
+                    color: white;
+                    font-weight: 8px;
+                    border-radius: 3px;
+                }
             }
        }
 
