--- a/starter-code/stylesSass/_mediumScreen.scss
+++ b/starter-code/stylesSass/_mediumScreen.scss
@@ -1,15 +1,15 @@
 /******************************************
-****** SMALL SCREEN (max-width: 768px) **** → DE 452px A 
+****** MEDIUM SCREEN (max-width: 768px) **** → DE 452px A
 ******************************************/
 body{
    main{
-
        #welcome{
             p{
                 width: 50%;
                 float: left;
                 text-align: right;
                 padding-right: 20px;
+                margin-top: 15px;
             }
 
             img {
@@ -30,6 +30,7 @@ body{
                 align-items: inherit;
                 justify-content: center;
                 margin-bottom: 10px;
+                margin-top: -12px;
 
                 button{
                     background: none;
@@ -44,6 +45,12 @@ body{
                     border-radius: 3px;
                     margin-right: 10px;
                 }
+            }
+       }
+
+       section{
+            #chat{
+                justify-content: center;
             }
        }
     }
