--- a/starter-code/stylesSass/_mediumScreen.scss
+++ b/starter-code/stylesSass/_mediumScreen.scss
@@ -1,6 +1,6 @@
-/******************************************
-****** MEDIUM SCREEN (max-width: 768px) **** → DE 452px A
-******************************************/
+/********************************************************
+*********** SMALL SCREEN DE 962PX A 1200PX **************
+********************************************************/
 body{
    main{
        #welcome{
