--- a/starter-code/stylesSass/_mobileView.scss
+++ b/starter-code/stylesSass/_mobileView.scss
@@ -1,5 +1,5 @@
 /******************************************
-****** MOBILE VIEW (max-width: 768px) ***** → (Min 280px) XS
+* MOBILE VIEW (Min 280px hasta 541px) XS **
 ******************************************/
 body{
     margin: 0;
