--- a/starter-code/stylesSass/_smallScreen.scss
+++ b/starter-code/stylesSass/_smallScreen.scss
@@ -1,6 +1,6 @@
-/******************************************
-****** SMALL SCREEN (max-width: 768px) **** → DE 452px A 
-******************************************/
+/********************************************************
+*********** SMALL SCREEN DE 452PX A 961 PX **************
+********************************************************/
 body{
     background-color: #F9F9F9;
    main{
